Fixed modal overlay with z-index.

--- a/src/components/Tweet/tweet.css
+++ b/src/components/Tweet/tweet.css
@@ -12,6 +12,7 @@
     transition: all 0.3s ease-in-out;
     pointer-events: none;
     height: 100vh;
+    z-index: 1;
   }
 
   .modal.show{
@@ -36,6 +37,14 @@
     bottom: none;
     display: flex;
     flex-direction: column;
+   }
+
+   @media only screen and (max-device-width: 1000px) {
+    .modal{width: 100vw;}
+    .modal-d{
+      width: 85vw;
+      height: 100vw;
+    }
    }
 
   .modal-header,
